bpo-41638: Improve ProgrammingError message for absent parameter. (GH-21999)

It contains now the name of the parameter instead of its index when parameters
are supplied as a dict.